-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.1
-
3f9427200bae1a84097b221839988d4d6c886fe7 (qt-creator/qt-creator/master)
Consider the following lambda function:
hello([]() -> void {
cout << "world";
});
When I use Ctrl+I, this is incorrectly indented as follows:
hello([]() -> void {
cout << "world";
});
But I would prefer it to be indented as it was.
NOTE: the shorter lambda syntax (without the arrow) is indented correctly:
hello([] {
cout << "world";
});
For Gerrit Dashboard: QTCREATORBUG-18497 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
309087,2 | CppTools: Fix formatting for lambdas with trailing return type | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |